--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+#PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/kursJPA
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
+#defalt connection pool
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
+
+
+#drop n create table again, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.open-in-view= true
+
+# development logging & formatting sql - not for production
+spring.jpa.show-sql=true 
+spring.jpa.properties.hibernate.format_sql=true
